[package]
name = "crab-jwt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Minimal JWT/JWKS library for Rust with RS256 support"
license = "MIT"
repository = "https://github.com/yourusername/crab-jwt"
keywords = ["jwt", "jwks", "rsa", "authentication", "token"]
categories = ["authentication", "cryptography"]

[dependencies]
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
